[package]
name = "displaycontrold"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Schuster <twihno@gmail.com>"]
description = "A small application to control displays via a serial interface."
license = "Mozilla Public License 2.0 (MPL-2.0)"

[lints.clippy]
pedantic = "forbid"
missing_docs = "forbid"
missing_docs_in_private_items = "forbid"

[dependencies]
clap = { version = "4.5.60", features = [
  "color",
  "error-context",
  "help",
  "std",
  "suggestions",
  "usage",
  "derive",
] }
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0.149"
serialport = { version = "4.8.1", features = ["libudev", "serde"] }
thiserror = "2.0.18"
